--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1202,7 +1202,7 @@ body {
   display: block;
   width: 7px;
   height: 319px;
-  background-image: url(../images/rectangle.svg);
+  background-image: url(../images/service_border.svg);
   position: absolute;
   right: 0;
   top: -63px;
